--- a/index..html
+++ b/index..html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My first Project</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
